feat: implement Phase 3A - new features:
- Rotate Pages
- PDF Info
- PDF Metadata
- Add Page Numbers