@@ -12,18 +12,19 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.multipart.MaxUploadSizeExceededException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 @Log4j2
 public class GlobalExceptionHandler {
+
+    private static final String ERROR_STATUS = "error";
 
     @ExceptionHandler(PdfErrorException.class)
     public ResponseEntity<ErrorResponse> handlePdfError(PdfErrorException ex, HttpServletRequest request) {
         log.error("PDF operation error: {}", ex.getMessage(), ex);
 
         ErrorResponse errorResponse = ErrorResponse.builder()
-                .status("error")
+                .status(ERROR_STATUS)
                 .message(ex.getMessage())
                 .error("PDF_OPERATION_ERROR")
                 .path(request.getRequestURI())
@@ -39,12 +40,12 @@ public class GlobalExceptionHandler {
                 .getFieldErrors()
                 .stream()
                 .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         log.warn("Validation error: {}", errors);
 
         ErrorResponse errorResponse = ErrorResponse.builder()
-                .status("error")
+                .status(ERROR_STATUS)
                 .message("Validation failed")
                 .error("VALIDATION_ERROR")
                 .details(errors)
@@ -60,7 +61,7 @@ public class GlobalExceptionHandler {
         log.error("File upload size exceeded: {}", ex.getMessage());
 
         ErrorResponse errorResponse = ErrorResponse.builder()
-                .status("error")
+                .status(ERROR_STATUS)
                 .message("File size exceeds maximum allowed size (100MB)")
                 .error("FILE_SIZE_EXCEEDED")
                 .path(request.getRequestURI())
@@ -75,7 +76,7 @@ public class GlobalExceptionHandler {
         log.warn("Invalid argument: {}", ex.getMessage());
 
         ErrorResponse errorResponse = ErrorResponse.builder()
-                .status("error")
+                .status(ERROR_STATUS)
                 .message(ex.getMessage())
                 .error("INVALID_ARGUMENT")
                 .path(request.getRequestURI())
@@ -90,7 +91,7 @@ public class GlobalExceptionHandler {
         log.warn("Rate limit exceeded for request: {}", request.getRequestURI());
 
         ErrorResponse errorResponse = ErrorResponse.builder()
-                .status("error")
+                .status(ERROR_STATUS)
                 .message("Too many requests. Please try again later.")
                 .error("RATE_LIMIT_EXCEEDED")
                 .path(request.getRequestURI())
@@ -105,7 +106,7 @@ public class GlobalExceptionHandler {
         log.error("Unexpected error occurred: {}", ex.getMessage(), ex);
 
         ErrorResponse errorResponse = ErrorResponse.builder()
-                .status("error")
+                .status(ERROR_STATUS)
                 .message("An unexpected error occurred")
                 .error("INTERNAL_SERVER_ERROR")
                 .path(request.getRequestURI())
