@@ -4,7 +4,7 @@ import com.itextpdf.kernel.pdf.PdfDocument;
 import com.itextpdf.kernel.pdf.PdfReader;
 import com.itextpdf.kernel.pdf.canvas.parser.PdfTextExtractor;
 import com.pdf.pdfapi.config.PdfConfig;
-import com.pdf.pdfapi.dto.PdfResult;
+import com.pdf.pdfapi.dto.*;
 import com.pdf.pdfapi.exception.PdfErrorException;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
@@ -88,8 +88,7 @@ class PdfServiceTest {
         assertEquals(2, results.size());
 
         // Verify each result
-        for (int i = 0; i < results.size(); i++) {
-            PdfResult result = results.get(i);
+        for (PdfResult result : results) {
             assertNotNull(result.content());
             assertTrue(result.content().length > 0);
             assertTrue(result.suggestedFileName().contains("splitDocument"));
@@ -98,7 +97,7 @@ class PdfServiceTest {
 
         // Compare with expected files
         String expected1 = pdfToText("src/test/resources/split/splitDocument_1.pdf");
-        String actual1 = pdfToText(results.get(0).content());
+        String actual1 = pdfToText(results.getFirst().content());
         assertEquals(expected1, actual1);
 
         String expected2 = pdfToText("src/test/resources/split/splitDocument_2.pdf");
@@ -164,7 +163,7 @@ class PdfServiceTest {
         assertNotNull(results);
         assertEquals(1, results.size());
 
-        PdfResult result = results.get(0);
+        PdfResult result = results.getFirst();
         assertNotNull(result.content());
         assertTrue(result.content().length > 0);
         assertTrue(result.suggestedFileName().endsWith(".pdf"));
@@ -198,5 +197,235 @@ class PdfServiceTest {
         }
 
         return text.toString();
+    }
+
+    // ==================== Phase 3A Tests ====================
+
+    @Test
+    @SneakyThrows
+    void rotate_given_valid_rotation_expect_rotated_pdf() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+        when(originalFile.getBytes()).thenReturn(Files.readAllBytes(Path.of("src/test/resources/extract/original_file.pdf")));
+
+        PdfResult result = pdfService.rotate(originalFile, 90);
+
+        // Verify result
+        assertNotNull(result);
+        assertNotNull(result.content());
+        assertTrue(result.content().length > 0);
+        assertTrue(result.suggestedFileName().contains("rotated"));
+        assertEquals(2, result.pageCount());
+
+        // Verify rotation was applied
+        try (PdfDocument document = new PdfDocument(new PdfReader(new ByteArrayInputStream(result.content())))) {
+            assertEquals(90, document.getPage(1).getRotation());
+            assertEquals(90, document.getPage(2).getRotation());
+        }
+    }
+
+    @Test
+    @SneakyThrows
+    void rotate_given_specific_pages_expect_only_those_pages_rotated() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+        when(originalFile.getBytes()).thenReturn(Files.readAllBytes(Path.of("src/test/resources/extract/original_file.pdf")));
+
+        PdfResult result = pdfService.rotate(originalFile, 180, 1);
+
+        // Verify result
+        assertNotNull(result);
+        assertEquals(2, result.pageCount());
+
+        // Verify only page 1 was rotated
+        try (PdfDocument document = new PdfDocument(new PdfReader(new ByteArrayInputStream(result.content())))) {
+            assertEquals(180, document.getPage(1).getRotation());
+            assertEquals(0, document.getPage(2).getRotation());
+        }
+    }
+
+    @Test
+    @SneakyThrows
+    void rotate_given_invalid_rotation_expect_failure() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+
+        // Rotation must be multiple of 90
+        assertThrows(PdfErrorException.class, () -> pdfService.rotate(originalFile, 45));
+    }
+
+    @Test
+    @SneakyThrows
+    void rotate_given_null_rotation_expect_failure() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+
+        assertThrows(PdfErrorException.class, () -> pdfService.rotate(originalFile, null));
+    }
+
+    @Test
+    @SneakyThrows
+    void getInfo_given_valid_pdf_expect_correct_info() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+        byte[] pdfBytes = Files.readAllBytes(Path.of("src/test/resources/extract/original_file.pdf"));
+        when(originalFile.getBytes()).thenReturn(pdfBytes);
+        when(originalFile.getSize()).thenReturn((long) pdfBytes.length);
+
+        PdfInfoResponse response = pdfService.getInfo(originalFile);
+
+        // Verify response
+        assertNotNull(response);
+        assertEquals("success", response.status());
+        assertEquals(2, response.pageCount());
+        assertEquals((long) pdfBytes.length, response.fileSizeBytes());
+        assertNotNull(response.pdfVersion());
+        assertNotNull(response.firstPageDimensions());
+        assertNotNull(response.firstPageDimensions().width());
+        assertNotNull(response.firstPageDimensions().height());
+        assertEquals("points", response.firstPageDimensions().unit());
+        assertNotNull(response.allPagesSameDimension());
+    }
+
+    @Test
+    @SneakyThrows
+    void getMetadata_given_valid_pdf_expect_metadata() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+        when(originalFile.getBytes()).thenReturn(Files.readAllBytes(Path.of("src/test/resources/extract/original_file.pdf")));
+
+        PdfMetadataResponse response = pdfService.getMetadata(originalFile);
+
+        // Verify response structure
+        assertNotNull(response);
+        assertEquals("success", response.status());
+        assertEquals("PDF metadata retrieved successfully", response.message());
+        assertNotNull(response.timestamp());
+        // Note: The actual values depend on the test PDF file's metadata
+        // We're just verifying the method doesn't crash and returns a proper response
+    }
+
+    @Test
+    @SneakyThrows
+    void updateMetadata_given_valid_metadata_expect_updated_pdf() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+        // Use merge/file1.pdf which has simpler/no metadata
+        when(originalFile.getBytes()).thenReturn(Files.readAllBytes(Path.of("src/test/resources/merge/file1.pdf")));
+
+        PdfMetadataRequest metadata = PdfMetadataRequest.builder()
+                .title("Test Title")
+                .author("Test Author")
+                .subject("Test Subject")
+                .keywords("Test Keywords")
+                .creator("Test Creator")
+                .build();
+
+        PdfResult result = pdfService.updateMetadata(originalFile, metadata);
+
+        // Verify result
+        assertNotNull(result);
+        assertNotNull(result.content());
+        assertTrue(result.content().length > 0);
+        assertTrue(result.suggestedFileName().contains("metadata_updated"));
+        assertEquals(1, result.pageCount());
+
+        // Verify metadata was updated
+        try (PdfDocument document = new PdfDocument(new PdfReader(new ByteArrayInputStream(result.content())))) {
+            assertEquals("Test Title", document.getDocumentInfo().getTitle());
+            // iText may append author to existing authors, so we check contains
+            assertTrue(document.getDocumentInfo().getAuthor().contains("Test Author"));
+            assertEquals("Test Subject", document.getDocumentInfo().getSubject());
+            assertEquals("Test Keywords", document.getDocumentInfo().getKeywords());
+            assertEquals("Test Creator", document.getDocumentInfo().getCreator());
+        }
+    }
+
+    @Test
+    @SneakyThrows
+    void updateMetadata_given_partial_metadata_expect_only_provided_fields_updated() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+        // Use merge/file1.pdf which has simpler/no metadata
+        when(originalFile.getBytes()).thenReturn(Files.readAllBytes(Path.of("src/test/resources/merge/file1.pdf")));
+
+        // Only update title and subject
+        PdfMetadataRequest metadata = PdfMetadataRequest.builder()
+                .title("New Title Only")
+                .subject("New Subject Only")
+                .build();
+
+        PdfResult result = pdfService.updateMetadata(originalFile, metadata);
+
+        // Verify result
+        assertNotNull(result);
+        assertEquals(1, result.pageCount());
+
+        // Verify specified metadata was updated
+        try (PdfDocument document = new PdfDocument(new PdfReader(new ByteArrayInputStream(result.content())))) {
+            assertEquals("New Title Only", document.getDocumentInfo().getTitle());
+            assertEquals("New Subject Only", document.getDocumentInfo().getSubject());
+        }
+    }
+
+    @Test
+    @SneakyThrows
+    void updateMetadata_given_null_metadata_expect_failure() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+
+        assertThrows(PdfErrorException.class, () -> pdfService.updateMetadata(originalFile, null));
+    }
+
+    @Test
+    @SneakyThrows
+    void addPageNumbers_given_valid_parameters_expect_numbered_pdf() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+        when(originalFile.getBytes()).thenReturn(Files.readAllBytes(Path.of("src/test/resources/extract/original_file.pdf")));
+
+        PdfResult result = pdfService.addPageNumbers(originalFile, "bottom-center", "Page {current} of {total}", null, null);
+
+        // Verify result
+        assertNotNull(result);
+        assertNotNull(result.content());
+        assertTrue(result.content().length > 0);
+        assertTrue(result.suggestedFileName().contains("numbered"));
+        assertEquals(2, result.pageCount());
+
+        // Verify PDF is valid
+        try (PdfDocument document = new PdfDocument(new PdfReader(new ByteArrayInputStream(result.content())))) {
+            assertEquals(2, document.getNumberOfPages());
+        }
+    }
+
+    @Test
+    @SneakyThrows
+    void addPageNumbers_given_page_range_expect_only_range_numbered() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+        when(originalFile.getBytes()).thenReturn(Files.readAllBytes(Path.of("src/test/resources/extract/original_file.pdf")));
+
+        // Only number page 1
+        PdfResult result = pdfService.addPageNumbers(originalFile, "top-right", "{page}", 1, 1);
+
+        // Verify result
+        assertNotNull(result);
+        assertEquals(2, result.pageCount());
+
+        // Verify PDF is valid
+        try (PdfDocument document = new PdfDocument(new PdfReader(new ByteArrayInputStream(result.content())))) {
+            assertEquals(2, document.getNumberOfPages());
+        }
+    }
+
+    @Test
+    @SneakyThrows
+    void addPageNumbers_given_default_parameters_expect_default_formatting() {
+        MultipartFile originalFile = mock(MultipartFile.class);
+        when(originalFile.getBytes()).thenReturn(Files.readAllBytes(Path.of("src/test/resources/extract/original_file.pdf")));
+
+        // Use null parameters to test defaults
+        PdfResult result = pdfService.addPageNumbers(originalFile, null, null, null, null);
+
+        // Verify result
+        assertNotNull(result);
+        assertNotNull(result.content());
+        assertTrue(result.content().length > 0);
+        assertEquals(2, result.pageCount());
+
+        // Verify PDF is valid
+        try (PdfDocument document = new PdfDocument(new PdfReader(new ByteArrayInputStream(result.content())))) {
+            assertEquals(2, document.getNumberOfPages());
+        }
     }
 }
